Fixed the overflow issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,7 @@ body {
 }
 
 .content {
-    height: 100vh;
-    overflow: auto; /* because some guy on stack overflow said so and it fixed the issue so i cant complain, if you do decide to delete this line, the loader animation will be fucked up beyond beleive */
+    height: fit-content;
 }
 
 /* LOADER ANIMATION */
@@ -66,4 +65,17 @@ body {
 
 #loaded {
     display: none;
+}
+
+#calendar-container {
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(233, 233, 233);
+    border-radius: 20px;
+    margin: 40px auto 0 auto;
+}
+
+#calendar {
+    width: 1500px;
+    height: 800px;
 }
